--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  flutter_native_splash: ^2.3.1
+
 
 dev_dependencies:
   flutter_test:
@@ -23,13 +23,30 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   build_runner: ^2.4.5
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
 
 flutter:
 
   uses-material-design: true
 
-  flutter_native_splash:
-    color: "#ffffff"
+#  flutter_launcher_icons:
+#    android: "launcher_icon"
+#    ios: true
+#    image_path: "assets/icon/icon.png"
+#    min_sdk_android: 21 # android min sdk min:16, default 21
+#    web:
+#      generate: true
+#      image_path: "path/to/image.png"
+#      background_color: "#hexcode"
+#      theme_color: "#hexcode"
+#    windows:
+#      generate: true
+#      image_path: "path/to/image.png"
+#      icon_size: 48 # min:48, max:256, default: 48
+#    macos:
+#      generate: true
+#      image_path: "path/to/image.png"
 
 
   # To add assets to your application, add an assets section, like this:
@@ -48,13 +65,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
+  fonts:
+    - family: Samsung Sharp Sans
+      fonts:
+        - asset: assets/fonts/samsungsharpsans.otf
+          style: normal
+   # - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
