--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  flutter_native_splash: ^2.3.1
 
 
 dev_dependencies:
@@ -24,7 +25,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.5
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.3.1
 
 flutter:
 
@@ -47,6 +47,13 @@ flutter:
 #    macos:
 #      generate: true
 #      image_path: "path/to/image.png"
+
+
+flutter_launcher_icons:
+  android: 'launcher_icon'
+  ios: true
+  image_path: "assets/icons/splash.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 
   # To add assets to your application, add an assets section, like this:
