--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ flutter:
 flutter_launcher_icons:
   android: 'launcher_icon'
   ios: true
-  image_path: "assets/icons/splash.png"
+  image_path: "assets/icons/favicon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 
