--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Eatsplorer"
+        android:theme="@style/Base.Theme.Eatsplorer"
         tools:targetApi="31" >
         <activity
             android:name=".view.HomeActivity"
@@ -37,9 +37,8 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".view.MapsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_maps" />
+            android:name=".MainActivity"
+            android:exported="false" />
         <activity
             android:name=".view.RegisterActivity"
             android:exported="false"
@@ -48,8 +47,9 @@
             android:name=".view.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+            android:name=".view.MapsActivity"
+            android:exported="true"
+            android:label="@string/title_activity_maps" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
