had to pass onboarding as a paramter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,9 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+            android:name=".view.MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps"/>
         <activity
             android:name=".view.RegisterActivity"
             android:exported="false"
@@ -47,9 +48,8 @@
             android:name=".view.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".view.MapsActivity"
-            android:exported="true"
-            android:label="@string/title_activity_maps" >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
