--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Base.Theme.Eatsplorer"
-        tools:targetApi="31" >
+        android:theme="@style/SplashTheme">
         <activity
             android:name=".view.HomeActivity"
             android:exported="false" />
