--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,10 @@ android {
 }
 
 dependencies {
+    def room_version = "2.5.2"
 
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.core:core-splashscreen:1.0.1'
