--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.kimikevin.eatsplorer'
-    compileSdk 34
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "com.kimikevin.eatsplorer"
         minSdk 30
-        targetSdk 34
+        targetSdkVersion 36
         versionCode 1
         versionName "1.0"
 
@@ -41,23 +41,23 @@ android {
 }
 
 dependencies {
-    def room_version = "2.6.1"
+    def room_version = "2.7.2"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'com.google.android.gms:play-services-maps:19.2.0'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
-    implementation 'com.google.android.libraries.places:places:3.5.0'
-    implementation 'com.google.firebase:firebase-auth:23.0.0'
+    implementation 'com.google.android.libraries.places:places:4.4.1'
+    implementation 'com.google.firebase:firebase-auth:24.0.1'
     implementation 'com.google.firebase:firebase-analytics'
 
-    implementation platform('com.google.firebase:firebase-bom:33.1.0')
+    implementation platform('com.google.firebase:firebase-bom:34.2.0')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 }
