--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,11 +46,12 @@
             android:label="RegisterActivity" />
         <activity
             android:name=".view.LoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_login"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/SplashTheme">
+            android:label="MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
