ensure progress bar hides after data load

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eatsplorer">
         <activity
+            android:name=".view.MapsActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.DetailActivity"
             android:exported="false" />
         <activity
-            android:name=".view.HomeActivity"
+            android:name=".view.OnboardingActivity"
             android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -52,7 +55,7 @@
             android:exported="false"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".view.MapsActivity"
+            android:name=".view.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
